[project]
name = "mtv-vm-baselines"
version = "0.1.0"
description = "MTV source VM baseline verification and test coverage tracking."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyvmomi>=8.0",
    "pydantic>=2.0",
    "typer[all]>=0.12",
]

[project.scripts]
mtv-vm-baselines = "mtv_vm_baselines.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtv_vm_baselines"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mtv_vm_baselines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
